[gd_scene load_steps=6 format=2]

[ext_resource path="res://Stages/Dummy.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Misc/dummy.png" type="Texture" id=2]
[ext_resource path="res://Audio/SE/hit.wav" type="AudioStream" id=3]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 40, 40 )

[node name="Area2D" type="Area2D"]
script = ExtResource( 1 )

[node name="Dummy" type="AnimatedSprite" parent="."]
scale = Vector2( 2, 2 )
frames = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="hurt" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -5.746
bus = "SFX"

[node name="multihurt" type="Timer" parent="."]
wait_time = 1.301
one_shot = true

[node name="multihurtrepeat" type="Timer" parent="."]
wait_time = 0.133

[connection signal="area_entered" from="." to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_Area2D_area_exited"]
[connection signal="timeout" from="multihurt" to="." method="_on_multihurt_timeout"]
[connection signal="timeout" from="multihurtrepeat" to="." method="_on_multihurtrepeat_timeout"]
